schema-editor/src/test/resources/testData/annotator/InvalidRef.es
namespace some

import <error descr="Unresolved reference">some.other</error>
import <error descr="Unresolved reference">foo</error>
import <error descr="Unresolved reference">bar</error>.*

record R extends <error descr="Unresolved reference">Q</error>